--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-M42BFQDH');</script>
+    <!-- End Google Tag Manager -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2R9G65GXE5"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -17,9 +24,8 @@
     <link rel="icon" type="image/x-icon" href="https://i.imgur.com/Awj5gG8.png">
 
 <script>
-    // var html = document.getElementsByTagName('html')[0];
-    // var body = document.getElementsByTagName('body')[0];
-    //
+
+    // let body = document.getElementById("body");
     // function check(){
     //     let arr=['logan','nate'];
     //
@@ -28,12 +34,12 @@
     //      let double=localStorage.setItem('name', name);
     //
     //     // If the name is not in the list
-    //     if (!arr.includes(name)) {
+    //     if (!arr.includes(name)||double) {
     //         // Prompt the user for their name
-    //         localStorage.setItem("name", name);
-    //         document.body.innerHTML = ' s';
     //
-    //         // If the name is not in the list
+    //         location.reload();
+    //
+    //         body.remove();
     //
     //     } else {
     //         alert("Welcome, " + name);
@@ -65,6 +71,10 @@
 
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M42BFQDH"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div class="container">
     <form class="calculator" name="calc">
         <input type="text" readonly class="value"  onclick="create()" name="txt"/>
