--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="https://i.imgur.com/Awj5gG8.png">
 
-
+    <script src="https://kit.fontawesome.com/5d1f19b7ac.js" crossorigin="anonymous"></script>
 
 
 
@@ -59,6 +59,13 @@
         <span class="num equal" onclick="document.calc.txt.value =eval(calc.txt.value)">=</span>
     </form>
 </div>
+<ul>
+    <li><a href="https://www.w3.org/Style/CSS/Overview.en.html"><i class="fab fa-css3" aria-hidden="true"></i></a></li>
+    <li><a href="https://www.javascript.com/"><i class="fab fa-square-js" aria-hidden="true"></i></a></li>
+    <li><a href="https://github.com/EdwardDK"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+    <li><a href="https://codepen.io/NoiceGamingCoder"><i class="fab fa-codepen" aria-hidden="true"></i></a></li>
+    <li><a href="https://discord.gg/TjCM2untHc"><i class="fab fa-discord" aria-hidden="true"></i></a></li>
+</ul>
 
 <script>
 
