--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
     function check(){
-        let arr=['logan','nate'];
+        let arr=['logan','nate','Wes'];
 
         // Get the name from local storage
         let name = localStorage.getItem('name');
