--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     function create() {
         alert("Congrats, your welcome - Edwarddk");
-        var url = "https://calculator-eddytech.koyeb.app/";
+        var url = "https://speccalc-eddytech.koyeb.app/";
         var win = window.open();
         win.document.body.style.margin = '0';
         win.document.body.style.height = '100vh';
