--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     <link rel="icon" type="image/x-icon" href="https://i.imgur.com/Awj5gG8.png">
 
     <script src="https://kit.fontawesome.com/5d1f19b7ac.js" crossorigin="anonymous"></script>
-
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<style>
+    body {
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif; 
+}
+</style>
 
 </head>
 <body>
@@ -111,7 +115,11 @@
                 window.location.href = "https://large-type.com/#get%20off%20my%20website";
             }
             else {
-                alert("Welcome, " + name);
+                Swal.fire({
+              title: "Welcome!",
+          text: "You may proceed"+' '+name,
+          icon: "success"
+});
                 localStorage.setItem("name", name);
             }
         }
