--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
     function check(){
-        let arr=['logan','nate','Wes'];
+        let arr=['Logan','Nate','Wes'];
 
         // Get the name from local storage
         let name = localStorage.getItem('name');
@@ -110,7 +110,10 @@
 
             // If the name is not in the list
             if (!arr.includes(name)) {
-                alert("Sorry, you are not allowed to use this calculator");
+               Swal.fire({
+              title: "Access Denied",
+          text: "You don't have access!",
+          icon: "error"
                 localStorage.setItem("name", name);
                 window.location.href = "https://large-type.com/#get%20off%20my%20website";
             }
@@ -124,7 +127,10 @@
             }
         }
         else {
-            alert("Welcome, " + name);
+            Swal.fire({
+              title: "Welcome!",
+          text: "You may proceed"+' '+name,
+          icon: "success"
         }
     }
 
