--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 window.location.href = "https://large-type.com/#get%20off%20my%20website";
             }
             else {
+                alert("Welcome, " + name);
                 Swal.fire({
               title: "Welcome!",
           text: "You may proceed"+' '+name,
@@ -124,10 +125,7 @@
             }
         }
         else {
-            Swal.fire({
-              title: "Welcome!",
-          text: "You may proceed"+' '+name,
-          icon: "success"
+            alert("Welcome, " + name);
         }
     }
 
