--- a/index.html
+++ b/index.html
@@ -124,11 +124,8 @@
             }
         }
         else {
-                Swal.fire({
-              title: "Welcome!",
-          text: "You may proceed"+' '+name,
-          icon: "success"
-});
+            alert("Welcome, " + name);
+        }
     }
 
     check()
