--- a/index.html
+++ b/index.html
@@ -123,9 +123,12 @@
                 localStorage.setItem("name", name);
             }
         }
-        else {
-            alert("Welcome, " + name);
-        }
+        {
+                Swal.fire({
+              title: "Welcome!",
+          text: "You may proceed"+' '+name,
+          icon: "success"
+});
     }
 
     check()
