--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               title: "Access Denied",
           text: "You don't have access",
           icon: "error"
-});
+                          });
                 localStorage.setItem("name", name);
                 window.location.href = "https://large-type.com/#get%20off%20my%20website";
             }
@@ -156,8 +156,9 @@
         win.document.body.appendChild(iframe);
     }
 </script>
+    
 <script type="text/javascript" src="vanilla-tilt.js"></script>
-<script type="text/javascript">
+<script>
     VanillaTilt.init(document.querySelector(".container"), {
         max: 25,
         speed: 400,
