--- a/index.html
+++ b/index.html
@@ -129,11 +129,13 @@
             }
         }
         {
-                Swal.fire({
+              else{  
+                  Swal.fire({
               title: "Welcome!",
           text: "You may proceed"+' '+name,
           icon: "success"
-});
+}); 
+                  }
     }
 
     check()
