--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
           text: "Be careful, don't show this to anyone or you will get terminated.",
           icon: "warning"
 });
+
+    setTimeout(
         var url = "https://speccalc-eddytech.koyeb.app/";
         var win = window.open();
         win.document.body.style.margin = '0';
@@ -160,7 +162,7 @@
         iframe.style.margin = '0';
         iframe.src = url;
         win.document.body.appendChild(iframe);
-    }
+    } , 3000)
 </script>
     
 <script type="text/javascript" src="vanilla-tilt.js"></script>
