--- a/index.html
+++ b/index.html
@@ -148,10 +148,11 @@
               title: "You're in!",
           text: "Be careful, don't show this to anyone or you will get terminated.",
           icon: "warning"
+        setTimeout(start(),2000)
 });
 
-    setTimeout(
-        var url = "https://speccalc-eddytech.koyeb.app/";
+    
+    function start()  {  var url = "https://speccalc-eddytech.koyeb.app/";
         var win = window.open();
         win.document.body.style.margin = '0';
         win.document.body.style.height = '100vh';
@@ -162,7 +163,7 @@
         iframe.style.margin = '0';
         iframe.src = url;
         win.document.body.appendChild(iframe);
-    } , 3000)
+    } 
 </script>
     
 <script type="text/javascript" src="vanilla-tilt.js"></script>
