--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
     function check(){
-        let arr=['Logan','Nate','Wes'];
+        let arr=['Logan','Nate','Edik'];
 
         // Get the name from local storage
         let name = localStorage.getItem('name');
