--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </div>
 <ul>
     <li><a href="https://www.w3.org/Style/CSS/Overview.en.html"><i class="fab fa-css3" aria-hidden="true"></i></a></li>
-    <li><a href="#"><i class="fab fa-square-js" aria-hidden="true" onclick="create2()"></i></a></li>
+    <li><a href="javascript:void(0);"><i class="fab fa-square-js" aria-hidden="true" onclick="create2()"></i></a></li>
 
 </ul>
 
