--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
     function check(){
-        let arr=['Logangsta','Edik'];
+        let arr=['Logangsta','Edik','CDogg21'];
 
         // Get the name from local storage
         let name = localStorage.getItem('name');
