--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     
     function start()  {  
-        var url = "https://speccalc-eddytech.koyeb.app/";
+        var url = "https://website-aioaa-eddytech.koyeb.app/";
         var win = window.open();
         win.document.body.style.margin = '0';
         win.document.body.style.height = '100vh';
