--- a/index.html
+++ b/index.html
@@ -204,7 +204,29 @@
         "max-glare":0.2,
     });</script>
 
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCCBabLsHOOeT4GcW7mcnVyW_drOtLMh4o",
+    authDomain: "speccalc.firebaseapp.com",
+    projectId: "speccalc",
+    storageBucket: "speccalc.appspot.com",
+    messagingSenderId: "342906272110",
+    appId: "1:342906272110:web:ff14075cef422b3ba8e97f",
+    measurementId: "G-G9L18ZJ83F"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
 </body>
